--- a/sass/_partials/sidebar.scss
+++ b/sass/_partials/sidebar.scss
@@ -3,6 +3,7 @@
 .sidebar {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
 }
 
 @media not (min-width: $bp-desktop) {
@@ -14,6 +15,8 @@
 @media (max-width: $bp-mobile) {
   #root>#page .sidebar.left {
     flex-direction: row;
+    align-items: center;
+    gap: 0;
   }
 }
 
